Colaboratory를 통해 생성됨

--- a/001.ipynb
+++ b/001.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled30.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMI6cYdNK1UCKJNuL9XeJvX",
+      "authorship_tag": "ABX9TyMJdvmwQaNX6Vl0Q6IucLHg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,18 +34,7 @@
         "id": "yHWPA9SdPDVD"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jB41DYRDPuG9"
-      },
-      "source": [
-        ""
+        "git upload test\n"
       ],
       "execution_count": null,
       "outputs": []
